[package]
name = "bevy-tetris-shaded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking", "bevy_winit"], default-features = false }
bevy_consumable_event = "0.1.0"
graphics-shapes = "0.4.0"
hexx = "0.12.0"
bytemuck = "1.14.0"
wgpu = "0.18.0"
winit = "0.28"
wgsl_preprocessor = "1.1.3"
instant = { version = "0.1.12", features = [] }
bevy_turborand = "0.7.0"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
incremental = false
