[package]
name = "bevy-tetris-shaded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["bevy_winit"], default-features = false }
bytemuck = "1.14.0"
wgpu = { version = "0.18.0", features = ["webgl"] }
winit = "0.28"
wgsl_preprocessor = "1.1.3"
instant = { version = "0.1.12", features = [] }
bevy_turborand = "0.7.0"
log = "0.4.20"
glyphon = "0.4.1"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Window", "Element"]

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
incremental = false
