[package]
name = "bevy-tetris-shaded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["bevy_winit"], default-features = false }
# bevy_framepace = "0.15.0"
bytemuck = "1.14.3"
wgpu = { version = "0.19.1", features = ["webgpu", "wgsl"] }
winit = "0.29.10"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
bevy_turborand = "0.8.1"
log = "0.4.20"
glyphon = "0.5.0"
async-std = { version = "1.12.0", features = ["unstable", "wasm-bindgen-futures"] }
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
extend-lifetime = "0.2.0"
bevy-async-task = "1.3.1"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Window", "Element"]

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
incremental = false
